# MidiKraft-base

./: CMakeLists.txt  README.md
include/: Additive.h  AdditiveCapability.h  AutoDetection.h  BankDumpCapability.h  BidirectionalSyncCapability.h  Capability.h  CreateInitPatchDataCapability.h  DataFileLoadCapability.h  DataFileSendCapability.h  DetailedParametersCapability.h  DiscoverableDevice.h  DrawbarOrgan.h  DynamicPlugin.h  EditBufferCapability.h  EditBufferHandler.h  FindSynthOnMidiNetwork.h  GlobalSettingsCapability.h  HandshakeLoadingCapability.h  HasBanksCapability.h  HybridWaveCapability.h  LayerCapability.h  LayeredPatch.h  LayeredPatchCapability.h  LegacyLoaderCapability.h  LoopDetection.h  MTSFile.h  MasterkeyboardCapability.h  MidiBankNumber.h  MidiChannel.h  MidiClockCapability.h  MidiController.h  MidiLocationCapability.h  MidiProgramNumber.h  MidiRequest.h  NamedDeviceCapability.h  NrpnDefinition.h  Patch.h  PatchNumber.h  ProgramDumpCapability.h  ProgressHandler.h  (+16 more)
src/: Additive.cpp  AutoDetection.cpp  DiscoverableDevice.cpp  DrawbarOrgan.cpp  FindSynthOnMidiNetwork.cpp  LoopDetection.cpp  MTSFile.cpp  MidiController.cpp  MidiRequest.cpp  NrpnDefinition.cpp  Patch.cpp  ReadonlySoundExpander.cpp  SimpleDiscoverableDevice.cpp  Synth.cpp  Tag.cpp  TimedMidiSender.cpp
